fix: update query to get tyre observations counts
